--- a/duiven.html
+++ b/duiven.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ðŸ¦… Pigeon Legends - Duiven Beheer</title>
-    <script src="config.js"></script>`n<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    `n<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ•Šï¸</text></svg>">
     <style>
@@ -433,7 +433,7 @@
         </div>
     </div>
 
-    <script src="config.js"></script>`n<script type="module">
+    `n<script type="module">
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
         import './weather.js';
         import './training-background.js';
@@ -804,4 +804,5 @@
     </script>
 </body>
 </html>
+
 
