--- a/profiel.html
+++ b/profiel.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ðŸ¦… Pigeon Legends - Profiel Instellingen</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ¦…</text></svg>">
-    <script src="config.js"></script>`n<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    `n<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="config.js"></script>`n<script type="module" src="weather.js"></script>
+    `n<script type="module" src="weather.js"></script>
     <style>
         * {
             margin: 0;
@@ -279,7 +279,7 @@
         </div>
     </div>
 
-    <script src="config.js"></script>`n<script>
+    `n<script>
         // Supabase configuratie
         const supabaseUrl = 'SUPABASE_CONFIG.url';
         const supabaseKey = 'SUPABASE_CONFIG.anonKey';
@@ -562,3 +562,4 @@
     </script>
 </body>
 </html> 
+
