--- a/duiventil.html
+++ b/duiventil.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
       <title>ðŸ¦… Pigeon Legends - Duiventil Beheer ðŸ </title>
       <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ¦…</text></svg>">
-  <script src="config.js"></script>`n<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  `n<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     :root {
@@ -530,7 +530,7 @@
     </div>
   </div>
 
-  <script src="config.js"></script>`n<script type="module">
+  `n<script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
     import './training-background.js';
     import './competition-background.js';
@@ -974,3 +974,4 @@
   </script>
 </body>
 </html>
+
