--- a/financien.html
+++ b/financien.html
@@ -437,7 +437,7 @@
     </div>
   </main>
 
-  <script src="config.js"></script>`n<script type="module">
+  `n<script type="module">
     
     import './weather.js';
     
@@ -453,3 +453,4 @@
   </script>
 </body>
 </html> 
+
