--- a/login.html
+++ b/login.html
@@ -217,10 +217,11 @@
         </a>
     </div>
 
-    <script src="config.js"></script>
     <script>
-        // Supabase configuratie - gebruik config.js
-        const supabase = window.supabase.createClient(SUPABASE_CONFIG.url, SUPABASE_CONFIG.anonKey);
+        // Supabase configuratie
+        const supabaseUrl = 'https://ltwolxjbmdopjslnlkx.supabase.co';
+        const supabaseKey = 'sb_publishable_-hFbgnkMK4xn3uAaqJEuxA_C_9HAV6e';
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
         // Toegestane test accounts
         const allowedAccounts = [
