--- a/trofeeenkast.html
+++ b/trofeeenkast.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ðŸ¦… Pigeon Legends - TrofeeÃ«nkast</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ¦…</text></svg>">
-    <script src="config.js"></script>`n<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    `n<script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -359,7 +359,7 @@
         </div>
     </div>
 
-    <script src="config.js"></script>`n<script>
+    `n<script>
         // Supabase configuratie
         const supabaseUrl = 'SUPABASE_CONFIG.url';
         const supabaseKey = 'SUPABASE_CONFIG.anonKey';
@@ -502,3 +502,4 @@
     </script>
 </body>
 </html> 
+
