--- a/wedstrijden.html
+++ b/wedstrijden.html
@@ -140,7 +140,7 @@
     </div>
   </div>
 
-  <script src="config.js"></script>`n<script type="module">
+  `n<script type="module">
     
     import './weather.js';
     import './competition-background.js';
@@ -175,3 +175,4 @@
   </script>
 </body>
 </html> 
+
