--- a/login.html
+++ b/login.html
@@ -184,8 +184,10 @@
 </head>
 <body>
     <div class="login-container">
-        <div class="logo">🦅</div>
-        <h1 class="title">🦅 Pigeon Legends</h1>
+        <div class="logo">
+            <img src="Duif1.png" alt="Pigeon" style="width: 60px; height: 60px; object-fit: cover;">
+        </div>
+        <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Log in met je test account</p>
 
         <div class="error-message" id="errorMessage"></div>
