--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>🦅 Pigeon Legends - Login</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦅</text></svg>">
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="config.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -185,7 +186,7 @@
 <body>
     <div class="login-container">
         <div class="logo">
-            <img src="Duif1.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
+            <img src="Duif1.png" alt="Pigeon" style="width: 100px; height: 100px; object-fit: contain; border-radius: 50%;">
         </div>
         <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Log in met je test account</p>
@@ -193,14 +194,7 @@
         <div class="error-message" id="errorMessage"></div>
         <div class="success-message" id="successMessage"></div>
 
-        <!-- Tijdelijke CORS oplossing -->
-        <div style="background: #fef3c7; border: 1px solid #f59e0b; border-radius: 8px; padding: 1rem; margin-bottom: 1rem;">
-            <p style="color: #92400e; margin: 0; font-size: 0.9rem;">
-                <strong>⚠️ CORS Fout Oplossing:</strong><br>
-                Gebruik de live website voor login:<br>
-                <a href="https://pigeonlegends.netlify.app" style="color: #3b82f6; text-decoration: underline;">https://pigeonlegends.netlify.app</a>
-            </p>
-        </div>
+
 
         <form class="login-form" id="loginForm">
             <div class="form-group">
@@ -230,22 +224,8 @@
 
     <script>
         // Supabase configuratie
-        const supabaseUrl = 'https://ltwolxjbmdopjslnlkx.supabase.co';
-        const supabaseKey = 'sb_publishable_-hFbgnkMK4xn3uAaqJEuxA_C_9HAV6e';
-        
-        // CORS oplossing: gebruik fetch met credentials
-        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey, {
-            auth: {
-                autoRefreshToken: true,
-                persistSession: true,
-                detectSessionInUrl: true
-            },
-            global: {
-                headers: {
-                    'Access-Control-Allow-Origin': '*'
-                }
-            }
-        });
+        // Supabase configuratie - gebruik config.js
+        const supabase = window.supabase.createClient(SUPABASE_CONFIG.url, SUPABASE_CONFIG.anonKey);
 
         // Toegestane test accounts
         const allowedAccounts = [
