--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
     <title>🦅 Pigeon Legends - Login</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦅</text></svg>">
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="config.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -224,8 +223,10 @@
 
     <script>
         // Supabase configuratie
-        // Supabase configuratie - gebruik config.js
-        const supabase = window.supabase.createClient(SUPABASE_CONFIG.url, SUPABASE_CONFIG.anonKey);
+        // Supabase configuratie - direct hardcoded voor Netlify
+        const supabaseUrl = 'https://ltwolxjbmdopjslnlkx.supabase.co';
+        const supabaseKey = 'sb_publishable_-hFbgnkMK4xn3uAaqJEuxA_C_9HAV6e';
+        const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
         // Toegestane test accounts
         const allowedAccounts = [
