--- a/trofeeenkast.html
+++ b/trofeeenkast.html
@@ -6,7 +6,6 @@
     <title>ðŸ¦… Pigeon Legends - TrofeeÃ«nkast</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ¦…</text></svg>">
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
-    <script src="config.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -361,9 +360,9 @@
     </div>
 
     `n<script>
-        // Supabase configuratie
-        const supabaseUrl = 'SUPABASE_CONFIG.url';
-        const supabaseKey = 'SUPABASE_CONFIG.anonKey';
+        // Supabase configuratie - direct hardcoded voor Netlify
+        const supabaseUrl = 'https://ltwolxjbmdopjslnlkx.supabase.co';
+        const supabaseKey = 'sb_publishable_-hFbgnkMK4xn3uAaqJEuxA_C_9HAV6e';
         const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
         // Controleer authenticatie
