--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ðŸ¦… Pigeon Legends - In Ontwikkeling</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>ðŸ¦…</text></svg>">
+    <title>Pigeon Legends - In Ontwikkeling</title>
+
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -183,43 +183,9 @@
 <body>
     <div class="container">
         <div class="logo" style="margin-bottom:1rem;">
-            <!-- Blauwgeschelpte vliegduif SVG -->
-            <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <ellipse cx="40" cy="50" rx="24" ry="14" fill="#bcd0e7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6"/>
-                <ellipse cx="54" cy="38" rx="7" ry="6" fill="#bcd0e7"/>
-                <ellipse cx="26" cy="38" rx="7" ry="6" fill="#bcd0e7"/>
-                <ellipse cx="40" cy="32" rx="7" ry="6" fill="#bcd0e7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <ellipse cx="40" cy="36" rx="18" ry="16" fill="#e5ecf6" fill-opacity="0.7"/>
-                <!-- Vleugelstrepen -->
-                <rect x="30" y="44" width="20" height="2" rx="1" fill="#6b7280"/>
-                <rect x="32" y="48" width="16" height="2" rx="1" fill="#6b7280"/>
-                <rect x="34" y="52" width="12" height="2" rx="1" fill="#6b7280"/>
-                <!-- Kopje -->
-                <ellipse cx="48" cy="28" rx="5" ry="5" fill="#e5ecf6"/>
-                <ellipse cx="49.5" cy="27.5" rx="1.2" ry="1.2" fill="#222"/>
-                <!-- Snavel -->
-                <polygon points="53,29 56,30 53,31" fill="#fbbf24"/>
-            </svg>
+            <img src="Duif1.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
         </div>
-                    <h1 class="title">ðŸ¦… Pigeon Legends</h1>
+        <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Professioneel duivenbeheer systeem</p>
         
         <div class="status-badge">
@@ -232,7 +198,7 @@
                 <li><i class="fas fa-check"></i> Persoonlijk duivenbeheer per gebruiker</li>
                 <li><i class="fas fa-check"></i> Gedeelde trainingen en wedstrijden</li>
                 <li><i class="fas fa-check"></i> Duiventil management</li>
-                <li><i class="fas fa-check"></i> FinanciÃ«le tracking</li>
+                <li><i class="fas fa-check"></i> Financiële tracking</li>
                 <li><i class="fas fa-check"></i> Prestatie statistieken</li>
                 <li><i class="fas fa-check"></i> Weerbericht integratie</li>
             </ul>
