--- a/login.html
+++ b/login.html
@@ -249,7 +249,9 @@
                 
                 if (hoursSinceLogin < 24) {
                     // Redirect naar profiel als al ingelogd
-                    window.location.href = 'profiel.html';
+                    setTimeout(() => {
+                        window.location.href = 'profiel.html';
+                    }, 100);
                 } else {
                     // Login verlopen, verwijder data
                     localStorage.removeItem('user_authenticated');
@@ -315,7 +317,10 @@
                     localStorage.setItem('team_name', teamName);
                     
                     // Direct naar profiel zonder melding
-                    window.location.href = 'profiel.html';
+                    localStorage.setItem('redirecting', 'true');
+                    setTimeout(() => {
+                        window.location.href = 'profiel.html';
+                    }, 500);
                 } else {
                     throw new Error('Onjuist wachtwoord');
                 }
