--- a/duiventil.html
+++ b/duiventil.html
@@ -535,9 +535,25 @@
     import './training-background.js';
     import './competition-background.js';
     
-    const SUPABASE_URL = 'SUPABASE_CONFIG.url';
-    const SUPABASE_KEY = 'SUPABASE_CONFIG.anonKey';
-    const client = createClient(SUPABASE_URL, SUPABASE_KEY);
+    // Check authenticatie
+const isAuthenticated = localStorage.getItem('user_authenticated');
+const userEmail = localStorage.getItem('user_email');
+const isRedirecting = localStorage.getItem('redirecting');
+
+// Verwijder redirect flag
+localStorage.removeItem('redirecting');
+
+if (isAuthenticated !== 'true' || !userEmail) {
+    if (!isRedirecting) {
+        setTimeout(() => {
+            window.location.href = 'login.html';
+        }, 100);
+    }
+}
+
+const SUPABASE_URL = 'https://ltwolxjbmdopjslnlkx.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_-hFbgnkMK4xn3uAaqJEuxA_C_9HAV6e';
+const client = createClient(SUPABASE_URL, SUPABASE_KEY);
 
     // Tijd en Weer Widget
     function updateTime() {
