--- a/dashboard.html
+++ b/dashboard.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🦅 Pigeon Legends - Dashboard</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🦅</text></svg>">
+    <title>Pigeon Legends - Dashboard</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script type="module" src="weather.js"></script>
@@ -340,8 +339,9 @@
         <!-- Header -->
         <header class="header">
                           <div class="logo">
-                  <span>🦅</span>
-                  <span>🦅 Pigeon Legends</span>
+                  <img src="Duif1.png" alt="Pigeon" style="width: 30px; height: 30px; object-fit: contain; margin-right: 10px;">
+                  <span>Pigeon Legends</span>
+                  <img src="Duif2.png" alt="Pigeon" style="width: 30px; height: 30px; object-fit: contain; margin-left: 10px;">
               </div>
             
             <div class="user-info">
