--- a/profiel.html
+++ b/profiel.html
@@ -191,7 +191,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🦅 Pigeon Legends</h1>
+            <h1>Pigeon Legends</h1>
             <div class="nav-links">
                 <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
                 <a href="duiven.html"><i class="fas fa-dove"></i> Duiven</a>
