--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo" style="margin-bottom:1rem;">
-            <img src="Duif1.png" alt="Pigeon" style="width: 160px; height: 160px; object-fit: contain;">
+        <div class="logo" style="margin-bottom:1rem; display: flex; justify-content: center; align-items: center; gap: 20px;">
+            <img src="Duif1.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
+            <img src="Duif2.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
         </div>
         <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Professioneel duivenbeheer systeem</p>
