--- a/profiel.html
+++ b/profiel.html
@@ -327,7 +327,7 @@
         });
 
         // Logout functie
-        function logout() {
+        window.logout = function() {
             localStorage.removeItem('user_authenticated');
             localStorage.removeItem('user_email');
             localStorage.removeItem('user_name');
