--- a/duiven.html
+++ b/duiven.html
@@ -65,6 +65,22 @@
             transform: translateY(-2px);
         }
 
+        .logout-btn {
+            background: #ef4444;
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 12px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+
+        .logout-btn:hover {
+            background: #dc2626;
+            transform: translateY(-2px);
+        }
+
         /* Weather Widget */
         .weather-widget {
             background: rgba(255, 255, 255, 0.95);
