--- a/index.html
+++ b/index.html
@@ -184,10 +184,11 @@
     <div class="container">
         <div class="logo" style="margin-bottom:1rem; display: flex; justify-content: center; align-items: center; gap: 20px;">
             <img src="Duif1.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
+            <img src="duifjong.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
             <img src="Duif2.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
         </div>
         <h1 class="title">Pigeon Legends</h1>
-        <p class="subtitle">Professioneel duivenbeheer systeem</p>
+        <p class="subtitle">Professioneel duivensimulatie spel</p>
         
         <div class="status-badge">
             <i class="fas fa-tools"></i> In Ontwikkeling
