--- a/wedstrijden.html
+++ b/wedstrijden.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="nl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Pigeon Legends - Wedstrijden</title>
+      <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pigeon Legends - Wedstrijden</title>
+    <link rel="icon" type="image/png" href="Duif1.png">
   <style>
     body {
       font-family: Arial, sans-serif;
