--- a/profiel.html
+++ b/profiel.html
@@ -201,7 +201,7 @@
                 <a href="wedstrijden.html"><i class="fas fa-trophy"></i> Wedstrijden</a>
                 <a href="financien.html"><i class="fas fa-euro-sign"></i> Financiën</a>
                 <a href="trofeeenkast.html"><i class="fas fa-medal"></i> Trofeeën</a>
-                <button class="logout-btn" onclick="logout()">
+                <button class="logout-btn" onclick="window.logout()">
                     <i class="fas fa-sign-out-alt"></i> Uitloggen
                 </button>
             </div>
