--- a/dashboard.html
+++ b/dashboard.html
@@ -350,7 +350,7 @@
                 <a href="profiel.html" class="profile-btn" style="background: #3b82f6; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem;">
                     <i class="fas fa-user-cog"></i> Profiel
                 </a>
-                <button class="logout-btn" onclick="logout()">
+                <button class="logout-btn" onclick="window.logout()">
                     <i class="fas fa-sign-out-alt"></i> Uitloggen
                 </button>
             </div>
