--- a/login.html
+++ b/login.html
@@ -225,9 +225,9 @@
         <div id="logoutSection" style="display: none; margin-top: 20px; text-align: center;">
             <p style="color: #6b7280; margin-bottom: 10px;">Je bent al ingelogd als:</p>
             <p id="currentUser" style="font-weight: 600; color: #1f2937; margin-bottom: 15px;"></p>
-            <button onclick="logout()" class="logout-btn" style="background: #ef4444; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease;">
-                <i class="fas fa-sign-out-alt"></i> Uitloggen
-            </button>
+                            <button onclick="window.logout()" class="logout-btn" style="background: #ef4444; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease;">
+                    <i class="fas fa-sign-out-alt"></i> Uitloggen
+                </button>
         </div>
     </div>
 
