--- a/dashboard.html
+++ b/dashboard.html
@@ -380,7 +380,7 @@
             <div class="dashboard-card" onclick="location.href='duiven.html'">
                 <div class="card-header">
                     <div class="card-icon duiven">
-                        <i class="fas fa-dove"></i>
+                        <img src="Duif1.png" alt="Duif" style="width: 40px; height: 40px; object-fit: contain;">
                     </div>
                     <div>
                         <h3 class="card-title">Duiven Beheer</h3>
@@ -400,7 +400,7 @@
             <div class="dashboard-card" onclick="location.href='duiventil.html'">
                 <div class="card-header">
                     <div class="card-icon til">
-                        <i class="fas fa-home"></i>
+                        <img src="duifjong.png" alt="Duif" style="width: 40px; height: 40px; object-fit: contain;">
                     </div>
                     <div>
                         <h3 class="card-title">Duiventil</h3>
@@ -420,7 +420,7 @@
             <div class="dashboard-card" onclick="location.href='training.html'">
                 <div class="card-header">
                     <div class="card-icon training">
-                        <i class="fas fa-dove"></i>
+                        <img src="Duif2.png" alt="Duif" style="width: 40px; height: 40px; object-fit: contain;">
                     </div>
                     <div>
                         <h3 class="card-title">Training</h3>
@@ -440,7 +440,7 @@
             <div class="dashboard-card" onclick="location.href='wedstrijden.html'">
                 <div class="card-header">
                     <div class="card-icon wedstrijden">
-                        <i class="fas fa-trophy"></i>
+                        <img src="Duif2.png" alt="Duif" style="width: 40px; height: 40px; object-fit: contain;">
                     </div>
                     <div>
                         <h3 class="card-title">Wedstrijden</h3>
