--- a/dashboard.html
+++ b/dashboard.html
@@ -185,7 +185,7 @@
         .card-icon img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 16px;
         }
 
@@ -487,7 +487,7 @@
             <div class="dashboard-card" onclick="location.href='trofeeenkast.html'">
                 <div class="card-header">
                     <div class="card-icon trofeeenkast">
-                        <i class="fas fa-medal"></i>
+                        <img src="duifprijs.png" alt="Duif">
                     </div>
                     <div>
                         <h3 class="card-title">Trofeeënkast</h3>
