--- a/dashboard.html
+++ b/dashboard.html
@@ -357,6 +357,9 @@
             </div>
             
             <div class="user-info">
+                <a href="profiel.html" class="profile-btn" style="background: #3b82f6; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; margin-right: 10px;">
+                    <i class="fas fa-user-cog"></i> Profiel
+                </a>
                 <button class="logout-btn" onclick="window.logout()" style="background: #ef4444; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease;">
                     <i class="fas fa-sign-out-alt"></i> Uitloggen
                 </button>
