--- a/dashboard.html
+++ b/dashboard.html
@@ -185,7 +185,7 @@
         .card-icon img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: cover;
             border-radius: 16px;
         }
 
