--- a/training.html
+++ b/training.html
@@ -783,7 +783,7 @@
   <header class="header">
     <div class="header-content">
       <div class="header-left">
-        <a href="index.html" class="back-button" id="back-link">
+        <a href="dashboard.html" class="back-button" id="back-link">
           <i class="fas fa-arrow-left"></i>
           <span data-translate="back">Terug</span>
         </a>
@@ -1260,7 +1260,7 @@
           }
           
           // Bereken totaal eigenschappen
-          const totaalEigenschappen = (duif.vormpeil || 0) + (duif.snelheid || 0) + (duif.conditie || 0) + (duif.oriÃ«ntatie || 0) + 
+          const totaalEigenschappen = (duif.vormpeil || 0) + (duif.snelheid || 0) + (duif.conditie || 0) + (duif.orientatie || 0) + 
                                      (duif.techniek || 0) + (duif.ervaring || 0) + (duif.aerodynamica || 0) + (duif.intelligentie || 0) + (duif.nachtvliegen || 0);
           
           // Mooiere libido weergave
