--- a/duiven.html
+++ b/duiven.html
@@ -302,7 +302,7 @@
         <div class="header">
             <div class="logo">
                 <a href="dashboard.html" class="back-button">
-                    <i class="fas fa-home"></i> Dashboard
+                    <i class="fas fa-home"></i> Hoofdpagina
                 </a>
             </div>
             
