--- a/financien.html
+++ b/financien.html
@@ -376,7 +376,7 @@
       <div class="header-left">
         <a href="dashboard.html" class="back-button" id="back-link">
           <i class="fas fa-arrow-left"></i>
-          <span data-translate="back">Terug</span>
+                      <span data-translate="back">Hoofdpagina</span>
         </a>
         <h1 class="page-title">
           <i class="fas fa-chart-line"></i>
