--- a/wedstrijden.html
+++ b/wedstrijden.html
@@ -112,7 +112,7 @@
 <body>
 
   <div class="topbar">
-            <a class="back-button" href="dashboard.html" id="back-link" data-translate="back">Dashboard</a>
+            <a class="back-button" href="dashboard.html" id="back-link" data-translate="back">Hoofdpagina</a>
     <h1>ðŸ† <span data-translate="competitions">Wedstrijden</span></h1>
     <div style="width: 80px;"></div>
   </div>
