--- a/dashboard.html
+++ b/dashboard.html
@@ -349,21 +349,18 @@
         <!-- Header -->
         <header class="header">
             <div class="logo">
-                <a href="index.html" class="back-button" style="background: #3b82f6; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; margin-right: 20px;">
-                    <i class="fas fa-arrow-left"></i> Terug
-                </a>
-                <img src="Duif1.png" alt="Pigeon" style="width: 30px; height: 30px; object-fit: contain; margin-right: 10px;">
-                <span>Pigeon Legends</span>
-                <img src="Duif2.png" alt="Pigeon" style="width: 30px; height: 30px; object-fit: contain; margin-left: 10px;">
+                <img src="Duif1.png" alt="Pigeon" style="width: 40px; height: 40px; object-fit: contain; margin-right: 15px;">
+                <span style="font-size: 1.33em; font-weight: 700;">Pigeon Legends</span>
+                <img src="Duif2.png" alt="Pigeon" style="width: 40px; height: 40px; object-fit: contain; margin-left: 15px;">
             </div>
             
             <div class="user-info">
-                <a href="profiel.html" class="profile-btn" style="background: #3b82f6; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem; margin-right: 10px;">
-                    <i class="fas fa-user-cog"></i> Profiel
-                </a>
-                <button class="logout-btn" onclick="window.logout()" style="background: #ef4444; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease;">
+                <button class="logout-btn" onclick="window.logout()" style="background: #ef4444; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; margin-right: 10px;">
                     <i class="fas fa-sign-out-alt"></i> Uitloggen
                 </button>
+                <a href="profiel.html" class="profile-btn" style="background: #3b82f6; color: white; border: none; padding: 0.75rem 1.5rem; border-radius: 12px; cursor: pointer; font-weight: 600; transition: all 0.3s ease; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem;">
+                    <i class="fas fa-user-cog"></i> Profiel
+                </a>
             </div>
         </header>
 
