--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
             <img src="Duif1.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
             <img src="duifjong.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
             <img src="Duif2.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
+            <img src="duifprijs.png" alt="Pigeon" style="width: 120px; height: 120px; object-fit: contain;">
         </div>
         <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Professioneel duivensimulatie spel</p>
