--- a/login.html
+++ b/login.html
@@ -36,7 +36,6 @@
         }
 
         .logo {
-            font-size: 3rem;
             margin-bottom: 1rem;
         }
 
@@ -180,13 +179,25 @@
             .title {
                 font-size: 1.5rem;
             }
+
+            .logo img {
+                width: 60px !important;
+                height: 60px !important;
+            }
+
+            .logo {
+                gap: 10px !important;
+            }
         }
     </style>
 </head>
 <body>
     <div class="login-container">
-        <div class="logo">
-            <img src="Duif1.png" alt="Pigeon" style="width: 100px; height: 100px; object-fit: contain; border-radius: 50%;">
+        <div class="logo" style="display: flex; justify-content: center; align-items: center; gap: 15px; margin-bottom: 1rem;">
+            <img src="Duif1.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
+            <img src="duifjong.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
+            <img src="Duif2.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
+            <img src="duifprijs.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
         </div>
         <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Log in met je test account</p>
