--- a/login.html
+++ b/login.html
@@ -197,7 +197,7 @@
             <img src="Duif1.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
             <img src="duifjong.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
             <img src="Duif2.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
-            <img src="duifprijs.png" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
+            <img src="duifprijs.png?v=1" alt="Pigeon" style="width: 80px; height: 80px; object-fit: contain;">
         </div>
         <h1 class="title">Pigeon Legends</h1>
         <p class="subtitle">Log in met je test account</p>
